--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,7 +15,7 @@
     Capture Image
   </ion-button>
 
-  <ion-button expand="full" (click)="startScan()">
+  <ion-button expand="full" (click)="openCameraForQR()">
     <ion-icon slot="start" name="qr-scanner"></ion-icon>
     Start scan
   </ion-button>
