--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,8 +15,8 @@
     Capture Image
   </ion-button>
 
-  <ion-button expand="full" (click)="openCameraForQR()">
-    <ion-icon slot="start" name="qr-scanner"></ion-icon>
+  <ion-button expand="full" (click)="startScan()">
+    <!-- <ion-icon slot="start" name="qr-scanner"></ion-icon> -->
     Start scan
   </ion-button>
 
